# podomoro-bot-codes

./: .env.example  .gitignore  README.md  bluetooth_tester.py  bt_server.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  servo_tester.py  tft_tester.py
model/: class_names.pth
src/audio/: audio_player.py
src/bluetooth/: bluetooth-server.py  mock-bluetooth.py  pomodoro_logic.py
src/bt_function/: bt_config.py  bt_config_v2.py
src/cv/: classifier.py  classifier_helper.py  mobilenet_model.py
src/docker/: Dockerfile  mobilenet_model.py  requirements.txt  server.py
src/expression/: display_face.py  display_face_v2.py  expression_config.py  face_map.py
src/servo/: mover.py
